# softserv-backend

./: .env  Cargo.toml  Dockerfile  README.md  compose.dev.yaml  compose.yaml
.cargo/: config.toml
.devcontainer/: .env  devcontainer.json  docker-compose.yml
.github/workflows/: docker-image.yml  rust.yml
migrations/2023-09-22-191537_create_tables/: down.sql  up.sql
resources/static/: styles.css
resources/templates/: 404.hbs  cart.hbs  index.hbs  layout.hbs  soft.hbs
src/: controller.rs  database_controller.rs  lib.rs  main.rs  methods.rs  model.rs  models.rs  schema.rs  view.rs
src/methods/: auth.rs  others.rs  requests.rs  softwares.rs  tags.rs
src/methods/auth/: middleware.rs
src/models/: db_types.rs  web_types.rs
swagger-ui/: openapi.yml  swagger-initializer.js
