[package]
name = "softserv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
diesel = { version = "2.1.1", features = ["postgres"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
handlebars = "4.4.0"
serde = { version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
