[package]
name = "softserv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "^0.6"
actix-web = "^4.4"
base64 = "^0.21.4"
diesel = { version = "^2.1", features = ["postgres", "chrono"] }
diesel-derive-enum = { version = "^2.1", features = ["postgres"] }
diesel_migrations = { version = "^2.1", features = ["postgres"] }
dotenvy = "^0.15"
env_logger = "^0.10"
serde = { version = "^1.0", features = ["derive"]}
actix-form-data = "0.6.2"
serde_json = "^1.0"
rust-s3 = "^0.33"
jsonwebtoken = "9.2.0"
chrono = "0.4.31"
actix-multipart = "0.6.1"
futures = "0.3.29"
pwhash = "1.0.0"
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }
utoipa = "4.2.0"
redis = { version = "0.24.0", features = ["tokio-comp"] }

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",
]